// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkProgress should render correctly 1`] = `
<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={25}
  aria-valuetext={null}
  className="bpk-progress"
  role="progressbar"
  tabIndex="0"
>
  <div
    className="bpk-progress__value"
    onTransitionEnd={[Function]}
    style={
      Object {
        "width": "25%",
      }
    }
  />
</div>
`;

exports[`BpkProgress should render correctly with "small" and "stepped" attributes 1`] = `
<div
  aria-valuemax={9}
  aria-valuemin={0}
  aria-valuenow={2}
  aria-valuetext={null}
  className="bpk-progress bpk-progress--small"
  role="progressbar"
  tabIndex="0"
>
  <div
    className="bpk-progress__value"
    onTransitionEnd={[Function]}
    style={
      Object {
        "width": "22.22222222222222%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "11.11111111111111%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "22.22222222222222%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "33.33333333333333%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "44.44444444444444%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "55.55555555555556%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "66.66666666666666%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "77.77777777777779%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "88.88888888888889%",
      }
    }
  />
</div>
`;

exports[`BpkProgress should render correctly with a "className" attribute 1`] = `
<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={25}
  aria-valuetext={null}
  className="bpk-progress my-progress-bar"
  role="progressbar"
  tabIndex="0"
>
  <div
    className="bpk-progress__value"
    onTransitionEnd={[Function]}
    style={
      Object {
        "width": "25%",
      }
    }
  />
</div>
`;

exports[`BpkProgress should render correctly with a "small" attribute 1`] = `
<div
  aria-valuemax={9}
  aria-valuemin={0}
  aria-valuenow={2}
  aria-valuetext={null}
  className="bpk-progress bpk-progress--small"
  role="progressbar"
  tabIndex="0"
>
  <div
    className="bpk-progress__value"
    onTransitionEnd={[Function]}
    style={
      Object {
        "width": "22.22222222222222%",
      }
    }
  />
</div>
`;

exports[`BpkProgress should render correctly with a "stepColor" attribute 1`] = `
<div
  aria-valuemax={9}
  aria-valuemin={0}
  aria-valuenow={2}
  aria-valuetext={null}
  className="bpk-progress"
  role="progressbar"
  tabIndex="0"
>
  <div
    className="bpk-progress__value"
    onTransitionEnd={[Function]}
    style={
      Object {
        "width": "22.22222222222222%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": "blue",
        "left": "11.11111111111111%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": "blue",
        "left": "22.22222222222222%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": "blue",
        "left": "33.33333333333333%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": "blue",
        "left": "44.44444444444444%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": "blue",
        "left": "55.55555555555556%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": "blue",
        "left": "66.66666666666666%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": "blue",
        "left": "77.77777777777779%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": "blue",
        "left": "88.88888888888889%",
      }
    }
  />
</div>
`;

exports[`BpkProgress should render correctly with a "stepped" attribute 1`] = `
<div
  aria-valuemax={9}
  aria-valuemin={0}
  aria-valuenow={2}
  aria-valuetext={null}
  className="bpk-progress"
  role="progressbar"
  tabIndex="0"
>
  <div
    className="bpk-progress__value"
    onTransitionEnd={[Function]}
    style={
      Object {
        "width": "22.22222222222222%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "11.11111111111111%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "22.22222222222222%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "33.33333333333333%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "44.44444444444444%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "55.55555555555556%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "66.66666666666666%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "77.77777777777779%",
      }
    }
  />
  <div
    className="bpk-progress__step"
    style={
      Object {
        "backgroundColor": undefined,
        "left": "88.88888888888889%",
      }
    }
  />
</div>
`;
